# HK

./: .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  arch_build.cmake  hk_config.txt  hk_doxygen_config.txt  mission_build.cmake
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-documentation.yml  codeql-build.yml
config/: default_hk_fcncode_values.h  default_hk_fcncodes.h  default_hk_interface_cfg.h  default_hk_interface_cfg_values.h  default_hk_internal_cfg.h  default_hk_internal_cfg_values.h  default_hk_mission_cfg.h  default_hk_msg.h  default_hk_msgdefs.h  default_hk_msgid_values.h  default_hk_msgids.h  default_hk_msgstruct.h  default_hk_platform_cfg.h  default_hk_tbl.h  default_hk_tbldefs.h  default_hk_tblstruct.h  default_hk_topicid_values.h  eds_hk_fcncode_values.h  eds_hk_interface_cfg_values.h  eds_hk_msgdefs.h  eds_hk_msgstruct.h  eds_hk_tbldefs.h  eds_hk_tblstruct.h  eds_hk_topicid_values.h
docs/: HK_RequirementsToDesignTrace.docx  HK_v2.5.0_AppRequirements.doc  HK_v2.5.0_DevelopersGuide.docx  HK_v2.5.0_VersionDescriptionDocument.doc  hk-detaildesign.doxyfile.in  hk_FunctionalRequirements.csv
docs/detailed_design/presentations/: CFS_HK_Design.ppt
docs/dox_src/: CMakeLists.txt  cfs_hk.dox  hk-common.doxyfile.in  hk-usersguide.doxyfile.in
docs/dox_src/users_guide/: cfs_hk.dox
docs/users_guide/html/: dir_0ded81eb944b029ba77b096b9c033d7c_dep.map  dir_773aad17c698169949d44bd77d8b362e_dep.map  dir_7dd07206cfcc4c09836709673c4c68ee_dep.map
eds/: hk.xml
fsw/inc/: hk_eventids.h  hk_events.h  hk_extern_typedefs.h  hk_fcncodes.h  hk_interface_cfg.h  hk_internal_cfg.h  hk_msg.h  hk_msgdefs.h  hk_msgids.h  hk_platform_cfg.h  hk_tbldefs.h  hk_topicids.h
fsw/mission_inc/: hk_perfids.h
fsw/platform_inc/: hk_msgids.h  hk_platform_cfg.h
fsw/src/: hk_app.c  hk_app.h  hk_cmds.c  hk_cmds.h  hk_dispatch.c  hk_dispatch.h  hk_eds_dispatch.c  hk_events.h  hk_msg.h  hk_msgdefs.h  hk_tbldefs.h  hk_utils.c  hk_utils.h  hk_verify.h  hk_version.h
fsw/tables/: hk_cpy_tbl.c
fsw/unit_test/: hk_app_test.c  hk_app_test.h  hk_test_utils.c  hk_test_utils.h  hk_testrunner.c  hk_utils_test.c  hk_utils_test.h  makefile
test_and_ground/asist/prc/: cfs_hk_requirements.h  scx_cpu1_hk_basichousekeeping.prc  scx_cpu1_hk_copytable1.prc  scx_cpu1_hk_copytable2.prc  scx_cpu1_hk_copytable3.prc  scx_cpu1_hk_copytable4.prc  scx_cpu1_hk_copytable5.prc  scx_cpu1_hk_gencmds.prc  scx_cpu1_hk_missingdata.prc  scx_cpu1_hk_sendoutmsg.prc  scx_cpu1_hk_start_apps.prc  scx_cpu1_hk_stresshousekeeping.prc  scx_cpu1_hk_stressmissingdata.prc  scx_cpu1_hk_stresstableload.prc  scx_cpu1_hk_tabletst.prc  scx_cpu1_hk_updatetbl.prc
test_and_ground/asist/prc/template/: template_hk_basichousekeeping.prc  template_hk_copytable1.prc  template_hk_copytable2.prc  template_hk_copytable3.prc  template_hk_copytable4.prc  template_hk_copytable5.prc  template_hk_gencmds.prc  template_hk_missingdata.prc  template_hk_sendoutmsg.prc  template_hk_start_apps.prc  template_hk_stresshousekeeping.prc  template_hk_stressmissingdata.prc  template_hk_stresstableload.prc
test_and_ground/asist/rdl/: scx_cmd_cpu1_hk_0154.rdl  scx_table_cpu1_hk_copy_4006.rdl  scx_tlm_cpu1_hk_combined_pkt1_0156.rdl  scx_tlm_cpu1_hk_combined_pkt2_0157.rdl  scx_tlm_cpu1_hk_combined_pkt3_0158.rdl  scx_tlm_cpu1_hk_combined_pkt4_0159.rdl  scx_tlm_cpu1_hk_combined_pkt5_0160.rdl  scx_tlm_cpu1_hk_combined_pkt6_0161.rdl  scx_tlm_cpu1_hk_hk_0155.rdl
test_and_ground/asist/rdl/template/: template_cmd_HK_CMD.rdl  template_table_HK_COPY_TBL.rdl  template_tlm_HK_COMBINED_PKT1_TLM.rdl  template_tlm_HK_COMBINED_PKT2_TLM.rdl  template_tlm_HK_COMBINED_PKT3_TLM.rdl  template_tlm_HK_COMBINED_PKT4_TLM.rdl  template_tlm_HK_COMBINED_PKT5_TLM.rdl  template_tlm_HK_COMBINED_PKT6_TLM.rdl  template_tlm_HK_HK_TLM.rdl
test_and_ground/itos/rec/: HK_CMD_LE.rec  HK_HK_LE.rec
test_and_ground/results/: HK_V2_4_1_0_TestReport.docx  RTTM.htm  TestExecutionSummary.htm
test_and_ground/results/Caelum/: scx_cpu1_hk_basichousekeeping-2021-139-16h43m15s.loge  scx_cpu1_hk_basichousekeeping-2021-139-16h43m15s.logf  scx_cpu1_hk_basichousekeeping-2021-139-16h43m15s.logp  scx_cpu1_hk_basichousekeeping-2021-139-16h43m15s.logr  scx_cpu1_hk_basichousekeeping-2021-139-16h43m15s.logs  scx_cpu1_hk_missingdata-2021-139-16h31m10s.loge  scx_cpu1_hk_missingdata-2021-139-16h31m10s.logf  scx_cpu1_hk_missingdata-2021-139-16h31m10s.logp  scx_cpu1_hk_missingdata-2021-139-16h31m10s.logr  scx_cpu1_hk_missingdata-2021-139-16h31m10s.logs
test_and_ground/results/Caelum/rc2.5.0/: scx_cpu1_hk_basichousekeeping-2021-225-12h08m45s.loge  scx_cpu1_hk_basichousekeeping-2021-225-12h08m45s.logf  scx_cpu1_hk_basichousekeeping-2021-225-12h08m45s.logp  scx_cpu1_hk_basichousekeeping-2021-225-12h08m45s.logr  scx_cpu1_hk_basichousekeeping-2021-225-12h08m45s.logs  scx_cpu1_hk_gencmds-2021-225-12h29m34s.loge  scx_cpu1_hk_gencmds-2021-225-12h29m34s.logf  scx_cpu1_hk_gencmds-2021-225-12h29m34s.logp  scx_cpu1_hk_gencmds-2021-225-12h29m34s.logr  scx_cpu1_hk_gencmds-2021-225-12h29m34s.logs  scx_cpu1_hk_missingdata-2021-225-12h34m47s.loge  scx_cpu1_hk_missingdata-2021-225-12h34m47s.logf  scx_cpu1_hk_missingdata-2021-225-12h34m47s.logp  scx_cpu1_hk_missingdata-2021-225-12h34m47s.logr  scx_cpu1_hk_missingdata-2021-225-12h34m47s.logs
unit-test/: CMakeLists.txt  README.txt  hk_app_test.h  hk_app_test_utils.h  hk_app_tests.c  hk_cmds_tests.c  hk_dispatch_tests.c  hk_eds_dispatch_tests.c  hk_utils_test.h  hk_utils_tests.c
unit-test/stubs/: hk_app_stubs.c  hk_cmds_stubs.c  hk_dispatch_stubs.c  hk_global_stubs.c  hk_utils_stubs.c
unit-test/utilities/: hk_test_utils.c  hk_test_utils.h
